fixing bugs on mobile devices

--- a/css/style.scss
+++ b/css/style.scss
@@ -353,7 +353,7 @@ hr {
   }
 
   .bg02 {
-  height: 400px; 
+    height: 400px; 
   }
 
   /* ---- nav ---- */
@@ -363,15 +363,23 @@ hr {
 
   .mobilenav {
     p {
-    padding-top: 29px;
+    padding-top: 18px;
     }
     h3 {
+    padding-top: 25px;
     font-size: 22pt;
     }
   }
 
+.filter-menu {
+  margin: 20px 0;
+  .button {
+    margin: 8px 23px;
+  }
+}
+
 .overlay-content {
-  top: 15%;
+  top: 10%;
 }
 
 .overlay .closebtn {
@@ -434,7 +442,7 @@ hr {
     h2 {
       line-height: 35px;
       font-size: 18pt;
-      padding: 80px 0 15px 0;
+      padding: 50px 0 15px 0;
     }
   }
 
